@@ -1,5 +1,8 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
+changes relative to sbcl-1.3.3:
+  * bug fix: SB-EVAL does not signal an error for (THE KEYWORD :FOO)
+
 changes in sbcl-1.3.3 relative to sbcl-1.3.2:
   * enhancement: warn about argument mismatch for functions passed as
     arguments to other functions (e.g. REDUCE, MAP) at compile-time.
